Fix overlapping issue

--- a/_sass/description.scss
+++ b/_sass/description.scss
@@ -23,7 +23,7 @@
 		cursor: pointer;
 
 		&:hover .imgBx {
-			transform: translateY(30px) scale(0.5);
+			transform: translateY(15px) scale(0.5);
 		}
 
 		& .imgBx {
